<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.paixon.exercise_testing_solution.MainActivity">

    <TextView
        android:id="@+id/counterLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Counter: " />

    <TextView
        android:id="@+id/counterValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:layout_toRightOf="@id/counterLabel"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add 1"
        android:layout_below="@id/counterLabel"
        android:id="@+id/buttonAdd"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonAdd"
        android:id="@+id/buttonSubtract"
        android:text="Subtract 1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonSubtract"
        android:layout_marginTop="50dp"
        android:inputType="number"
        android:id="@+id/valueEditText"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add Value"
        android:layout_below="@id/valueEditText"
        android:id="@+id/buttonAddValue"/>

</RelativeLayout>
